crates/runtime/tests/duckdb/snapshots/integration__duckdb__test_json_as_text_results.snap
---
source: crates/runtime/tests/duckdb/mod.rs
expression: pretty
---
+-----------+
| name_text |
+-----------+
| alice     |
| bob       |
| charlie   |
+-----------+
