crates/runtime/tests/duckdb/snapshots/integration__duckdb__test_json_contains_explain.snap
---
source: crates/runtime/tests/duckdb/mod.rs
expression: pretty
---
+---------------+---------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                  |
+---------------+---------------------------------------------------------------------------------------+
| logical_plan  | Projection: has_name                                                                  |
|               |   Sort: json_test.id ASC NULLS LAST                                                   |
|               |     Projection: json_contains(json_test.data, Utf8("name")) AS has_name, json_test.id |
|               |       TableScan: json_test projection=[id, data]                                      |
| physical_plan | ProjectionExec: expr=[has_name@0 as has_name]                                         |
|               |   SortPreservingMergeExec: [id@1 ASC NULLS LAST]                                      |
|               |     SortExec: expr=[id@1 ASC NULLS LAST], preserve_partitioning=[true]                |
|               |       ProjectionExec: expr=[json_contains(data@1, name) as has_name, id@0 as id]      |
|               |         RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1          |
|               |           SchemaCastScanExec                                                          |
|               |             CooperativeExec                                                           |
|               |               BytesProcessedExec                                                      |
|               |                 DuckSqlExec sql= SELECT "id", "data" FROM json_test                   |
|               |                                                                                       |
+---------------+---------------------------------------------------------------------------------------+
