crates/runtime/tests/duckdb/snapshots/integration__duckdb__test_json_contains_results.snap
---
source: crates/runtime/tests/duckdb/mod.rs
expression: pretty
---
+----------+
| has_name |
+----------+
| true     |
| true     |
| true     |
+----------+
