crates/runtime/tests/duckdb/snapshots/integration__duckdb__test_json_get_bool_results.snap
---
source: crates/runtime/tests/duckdb/mod.rs
expression: pretty
---
+--------+
| active |
+--------+
| true   |
| false  |
| true   |
+--------+
