crates/runtime/tests/duckdb/snapshots/integration__duckdb__test_json_get_float_results.snap
---
source: crates/runtime/tests/duckdb/mod.rs
expression: pretty
---
+-------+
| score |
+-------+
| 4.5   |
| 3.2   |
| 4.8   |
+-------+
