crates/runtime/tests/duckdb/snapshots/integration__duckdb__test_json_get_int_results.snap
---
source: crates/runtime/tests/duckdb/mod.rs
expression: pretty
---
+-----+
| age |
+-----+
| 30  |
| 25  |
| 35  |
+-----+
