crates/runtime/tests/duckdb/snapshots/integration__duckdb__test_json_get_str_explain.snap
---
source: crates/runtime/tests/duckdb/mod.rs
expression: pretty
---
+---------------+----------------------------------------------------------------------------------+
| plan_type     | plan                                                                             |
+---------------+----------------------------------------------------------------------------------+
| logical_plan  | Projection: name                                                                 |
|               |   Sort: json_test.id ASC NULLS LAST                                              |
|               |     Projection: json_get_str(json_test.data, Utf8("name")) AS name, json_test.id |
|               |       TableScan: json_test projection=[id, data]                                 |
| physical_plan | ProjectionExec: expr=[name@0 as name]                                            |
|               |   SortPreservingMergeExec: [id@1 ASC NULLS LAST]                                 |
|               |     SortExec: expr=[id@1 ASC NULLS LAST], preserve_partitioning=[true]           |
|               |       ProjectionExec: expr=[json_get_str(data@1, name) as name, id@0 as id]      |
|               |         RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1     |
|               |           SchemaCastScanExec                                                     |
|               |             CooperativeExec                                                      |
|               |               BytesProcessedExec                                                 |
|               |                 DuckSqlExec sql= SELECT "id", "data" FROM "json_test"            |
|               |                                                                                  |
+---------------+----------------------------------------------------------------------------------+
